Fixed issue with lead text size on mobile

--- a/src/documents/styles/style.css.styl
+++ b/src/documents/styles/style.css.styl
@@ -21,7 +21,7 @@ subtleBorder= 1px solid #f0f0f0
 body 
   font-family sans-serif-family  
 
-body,pre,code, h1, .h1,h2, .h2,h3, .h3,h4, .h4,h5, .h5,h6, .h6  
+body,pre,code, h1, .h1,h2, .h2,h3, .h3,h4, .h4h5, .h5,h6, .h6  
   color textGrey
 
 body,.jumbotron
@@ -36,6 +36,9 @@ pre
 blockquote
   font-size 1.2em
   font-style italic
+
+.lead
+  font-weight 400
 
 .pop
   color red   
@@ -82,6 +85,9 @@ blockquote
   .site-pages > li:nth-child(2)
     float right !important
 
+  .lead
+    font-size 1.2em
+
 .blog-post, blog-page
   border-bottom subtleBorder
   padding 20px 0px
@@ -116,6 +122,11 @@ blockquote
 
 .blog-post-title, .page-title, .blog-post, blog-page
   margin-bottom 16px
+
+.blog-post-title, .page-title
+  font-size 2.8em
+.blog-post-date
+  font-size 1.4em
 
 /* Small devices (tablets, 768px and up) */
 @media (min-width: 768px)
